endpoints, swagger update
