# src/controllers/event.controller.ts
@@ -1,4 +1,6 @@
 import { Controller, Get, Path, Route } from "tsoa";
+import { Document } from "mongoose";
+
 import { IEvent } from "../types";
 import { Event } from "../db/models";
 import { formatTime } from "../utils";
@@ -6,19 +8,17 @@ import { formatTime } from "../utils";
 @Route("/events")
 export class EventController extends Controller {
   @Get("")
-  public async getEvents(): Promise<any[]> {
-    const records = await Event.find((err, docs) => {
+  public async getEvents(): Promise<any> {
+    await Event.find((err, docs) => {
       if (err) {
         console.error(err);
         return [];
       }
       return docs;
     });
-
-    return records;
   }
 
-  @Get("users/{userId}")
+  @Get("/users/{userId}")
   public async getUserEvent(@Path("userId") userId: string): Promise<any> {
     // return all events for a single user
     const records = await Event.find((err, docs) => {
@@ -31,8 +31,6 @@ export class EventController extends Controller {
 
     return records.filter(item => (item["userId"] = userId));
   }
-
-  // TODO: make a post an event
 
   @Get("/today")
   public async getTodaysEvents(): Promise<any> {
